Changed invalid h6 tag

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
     <section class="pagePut" id="pagePut">
         <h2>PUT page</h2>
         <div id="editGetForm">
-            <label for="nameInput"><h6>Get store by name:</h6></label>
+            <h6><label for="nameInput">Get store by name:</label></h6>
             <input type="text" id="nameInputPut" size="20">
             <button class="btn btn-primary" id="button_get_person1">GET</button>
         </div>
