--- a/client/index.html
+++ b/client/index.html
@@ -45,8 +45,6 @@
                 <th scope="col" class="thead-dark">Id</th>
                 <th scope="col" class="thead-dark">Name</th>
                 <th scope="col" class="thead-dark">Phone</th>
-                <th scope="col" class="thead-dark">Email</th>
-                <th scope="col" class="thead-dark">Street</th>
                 <th scope="col" class="thead-dark">City</th>
                 <th scope="col" class="thead-dark">Zip</th>
             </tr>
@@ -143,6 +141,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-<script src="../client/src/app.js" charset="utf-8"></script>
+<script src="src/app.js" charset="utf-8"></script>
 </body>
 </html>
